--- a/portfolio-app/src/app/app.component.html
+++ b/portfolio-app/src/app/app.component.html
@@ -1,10 +1,6 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Ramiro Gonzalez
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-router-outlet>
+  </ion-router-outlet>
+  
 </ion-app>
