--- a/portfolio-app/src/app/tab2/tab2.page.html
+++ b/portfolio-app/src/app/tab2/tab2.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+      Resume
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,70 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
+      <ion-title size="large">Resume</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  <ion-fab horizontal="end" vertical="top" slot="fixed" edge>
+    <ion-fab-button>
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-list>
+      <ion-fab-button color="light">
+        <ion-icon name="logo-github"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button color="light">
+        <ion-icon name="logo-instagram"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button color="light">
+        <ion-icon name="logo-youtube"></ion-icon>
+      </ion-fab-button>
+    </ion-fab-list>
+  </ion-fab>
+  <div class="wrapper clearfix">
+    <div class="left">
+        
+        <div class="name-hero">
+          
+          <div class="me-img"></div>
+          
+          <div class="name-text">
+            
+            <h1>Ramiro <em>Gonzalez</em></h1>
+            <p>Merced, CA 95341</p>
+            <p>ramirogonzalez@linux.com</p> 
+            <p>(209) 261-0645</p>
+         
+          </div>
+       
+        </div>
+        
+      </div>
+     <div class="right">
+        
+        <div class="inner">
+          <section>
+            <h1>Education</h1>
+            <p>August 2019 - May 2020 <em>University of California, Merced</em></p>
+            <p><em>B.S Computing Science and Engineering, Political Science Minor</em></p>
+            <p> <em>Revelant Courses: </em>Algorith Design & Analysis, Computer Vision, Computer Architecture, Databases Systems, Operating Systems</p>
+          </section>
+          <section>
+            <h1>Technical Skills</h1>
+            <ul class="skill-set">
+              <li>Ionic Angular 9</li>
+              <li>Linux, Apache, PHP,MySQL</li>
+              <li>Virtualization</li>
+              <li>Adobe Photoshop</li>
+              
+            </ul>
+          </section>
+        </div>
+        
+      </div>
+      
+      
+      
+    </div>
+
 </ion-content>
