deployed v0 to heroku

--- a/portfolio-app/src/app/tab1/tab1.page.html
+++ b/portfolio-app/src/app/tab1/tab1.page.html
@@ -38,8 +38,31 @@
       </ul>
      </ion-card-content>
   </ion-card>
-  <!-- fab placed to the bottom and start and on the bottom edge of the content overlapping footer with a list to the right -->
-  <!-- fab placed to the top and end and on the top edge of the content overlapping header -->
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Battery Hacks</ion-card-title>
+      <ion-card-subtitle>
+        <ion-chip>
+          <ion-icon name="checkmark" color="primary"></ion-icon> 
+          <ion-label>Completed
+          </ion-label>
+        </ion-chip>
+        <ion-chip>
+          <ion-label>Project Management</ion-label>
+        </ion-chip>
+       
+        <ion-chip>
+          <ion-label>LaTex</ion-label>
+        </ion-chip>
+      </ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content>
+      <b>BatteryHacks</b> was part of University of California, Merced's very first Tech Convention v0.
+      <ul> 
+        <li>Total Funding: $2,400</li>
+      </ul>
+     </ion-card-content>
+  </ion-card>
   
   
 </ion-content>
