updated resume and projects

--- a/portfolio-app/src/app/tab1/tab1.page.html
+++ b/portfolio-app/src/app/tab1/tab1.page.html
@@ -7,15 +7,13 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large" text-center>Projects</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  
 
   <ion-card>
+   
+    <img class="displayed"  height="250 px" width="400 px" src="./assets/dead-bat.png">
     <ion-card-header>
-      <ion-card-title>Battery Hacks</ion-card-title>
+      <ion-card-title><a href="https://github.com/r4mz3r0" target="_blank">Battery Hacks</a></ion-card-title>
       <ion-card-subtitle>
         <ion-chip>
           <ion-icon name="checkmark" color="primary"></ion-icon> 
@@ -30,17 +28,22 @@
           <ion-label>LaTex</ion-label>
         </ion-chip>
       </ion-card-subtitle>
+
     </ion-card-header>
     <ion-card-content>
-      <b>BatteryHacks</b> was part of University of California, Merced's very first Tech Convention v0.
+      <p><b>BatteryHacks</b> was part of University of California, Merced's very first Tech Convention v0.</p>
+      <p>Designed and built battery packs using cylindrical 18650 lithium ion batteries.
+         Skills include but arenot limited to understand basic circuitry, soldering, using a multi-meter and battery safety. 
+        Professional skills include communication, collaboration, and listening</p>
       <ul> 
         <li>Total Funding: $2,400</li>
+        <li>Coordinated events attended by 10 students</li>
       </ul>
      </ion-card-content>
   </ion-card>
   <ion-card>
     <ion-card-header>
-      <ion-card-title>Battery Hacks</ion-card-title>
+      <ion-card-title><a href="google.com" target="__blank">Kid's Day In Tech</a></ion-card-title>
       <ion-card-subtitle>
         <ion-chip>
           <ion-icon name="checkmark" color="primary"></ion-icon> 
@@ -52,14 +55,22 @@
         </ion-chip>
        
         <ion-chip>
-          <ion-label>LaTex</ion-label>
+          <ion-label>Coordinating</ion-label>
+        </ion-chip>
+        <ion-chip>
+          <ion-label>Leadership</ion-label>
         </ion-chip>
       </ion-card-subtitle>
     </ion-card-header>
     <ion-card-content>
-      <b>BatteryHacks</b> was part of University of California, Merced's very first Tech Convention v0.
+      <p><b>BatteryHacks</b> was part of University of California, Merced's very first Tech Convention v0.</p>
+      <p>Able to design and build batterypacks using cylindrical 18650L ithium Ion batteries.
+         Skills include but arenot limited to understand basic circuitry, soldering, using a multi-meter and battery safety. 
+        Professional skills include communication, collaboration, and listening</p>
       <ul> 
-        <li>Total Funding: $2,400</li>
+        <li>Total Funding: $5,800</li>
+        <li>Led a a team 8</li>
+        <li>Coordinated events attended by a total of 100+ kid's and parents</li>
       </ul>
      </ion-card-content>
   </ion-card>
