--- a/portfolio-app/src/app/tab2/tab2.page.html
+++ b/portfolio-app/src/app/tab2/tab2.page.html
@@ -7,19 +7,14 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Resume</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
   <ion-fab horizontal="end" vertical="top" slot="fixed" edge>
     <ion-fab-button>
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
     <ion-fab-list>
-      <ion-fab-button color="light">
-        <ion-icon name="logo-github"></ion-icon>
+      <ion-fab-button target="_blank" href="https://github.com/r4mz3r0" color="light">
+        <ion-icon  name="logo-github"></ion-icon>
       </ion-fab-button>
       <ion-fab-button color="light">
         <ion-icon name="logo-instagram"></ion-icon>
