updated global css to support dark mode

--- a/portfolio-app/src/app/tab1/tab1.page.html
+++ b/portfolio-app/src/app/tab1/tab1.page.html
@@ -42,6 +42,7 @@
      </ion-card-content>
   </ion-card>
   <ion-card>
+    <img class="displayed"  height="250 px" width="400 px" src="./assets/kidsDay.jpg">
     <ion-card-header>
       <ion-card-title><a href="google.com" target="__blank">Kid's Day In Tech</a></ion-card-title>
       <ion-card-subtitle>
