--- a/portfolio-app/src/app/tab2/tab2.page.html
+++ b/portfolio-app/src/app/tab2/tab2.page.html
@@ -53,12 +53,22 @@
             <p> <em>Revelant Courses: </em>Algorith Design & Analysis, Computer Vision, Computer Architecture, Databases Systems, Operating Systems</p>
           </section>
           <section>
+            <h1>Experience</h1>
+            <h2>Amazon.com</h2>
+            <p>April 2021 - Present</p>
+            <h3>Amazon Games Software QA Tech</h3>
+            <p>Current Project: New World</p>
+            <h3>Amazon Robotics Coordinator</h3>
+            <p>November 2020 - April 2021</p>
+            <h3>Interim Information Technology (I.T.) Coordinaor</h3>
+          </section>
+          <section>
             <h1>Technical Skills</h1>
             <ul class="skill-set">
               <li>Ionic Angular 9</li>
               <li>Linux, Apache, PHP,MySQL</li>
               <li>Virtualization</li>
-              <li>Adobe Photoshop</li>
+              <li>CompTIA A+ Certified</li>
               
             </ul>
           </section>
