--- a/portfolio-app/src/app/tabs/tabs.page.html
+++ b/portfolio-app/src/app/tabs/tabs.page.html
@@ -12,9 +12,10 @@
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+      <ion-icon name="chatboxes"></ion-icon>
+      <ion-label>Chat</ion-label>
     </ion-tab-button>
+
   </ion-tab-bar>
 
 </ion-tabs>
