--- a/portfolio-app/src/app/tab1/tab1.page.html
+++ b/portfolio-app/src/app/tab1/tab1.page.html
@@ -41,6 +41,9 @@
       </ul>
      </ion-card-content>
   </ion-card>
+
+
+
   <ion-card>
     <img class="displayed"  height="250 px" width="400 px" src="./assets/kidsDay.jpg">
     <ion-card-header>
@@ -76,5 +79,70 @@
      </ion-card-content>
   </ion-card>
   
+  <ion-card>
+   
+    <img class="displayed"  height="250 px" width="400 px" src="./assets/dead-bat.png">
+    <ion-card-header>
+      <ion-card-title><a href="https://github.com/r4mz3r0" target="_blank">Computer Science: Problem Based Learning</a></ion-card-title>
+      <ion-card-subtitle>
+        <ion-chip>
+          <ion-icon name="checkmark" color="primary"></ion-icon> 
+          <ion-label>Completed (Version 0)
+          </ion-label>
+        </ion-chip>
+        <ion-chip>
+          <ion-label>Computer Science Education</ion-label>
+        </ion-chip>
+       
+        <ion-chip>
+          <ion-label>Teaching</ion-label>
+        </ion-chip>
+      </ion-card-subtitle>
+
+    </ion-card-header>
+    <ion-card-content>
+      <p><b>Computer Science: Problem Based Learning</b> is a book written using LaTex typesetting system</p>
+      <p>A compilation of Computer Science notes, study guides, projects, and problemss I solved while pursuing a degree in Computer Science and engineering. The topics include Algorithm Design, Coding Assesments, Operating Systems, Computer Architecture, Computer Vision, Database Systems, and Object Oriented Programming. </p>
+      <ul> 
+        <li>Total Impact: Study guides used by various Computer Science students</li>
+        <li>Formed various study groups</li>
+        <li>Awarded a degree in Computer Science and Engineering Class of 2020</li>
+      </ul>
+     </ion-card-content>
+  </ion-card>
   
+  <ion-card>
+   
+    <img class="displayed"  height="250 px" width="400 px" src="./assets/dead-bat.png">
+    <ion-card-header>
+      <ion-card-title><a href="https://github.com/r4mz3r0" target="_blank">CompTIA A+ Bible</a></ion-card-title>
+      <ion-card-subtitle>
+        <ion-chip>
+          <ion-icon name="checkmark" color="primary"></ion-icon> 
+          <ion-label>Completed (Version 0)
+          </ion-label>
+        </ion-chip>
+        <ion-chip>
+          <ion-label>Technician Skills</ion-label>
+        </ion-chip>
+       
+        <ion-chip>
+          <ion-label>Teaching</ion-label>
+        </ion-chip>
+      </ion-card-subtitle>
+
+    </ion-card-header>
+    <ion-card-content>
+      <p><b>CompTIA A+ Bible</b> is a book written using LaTex typesetting system</p>
+      <p>A compilation of 100+ notes, problems, solutions in preparation for the CompTIA A+ certification </p>
+      <ul> 
+        <li>Result: Certified A+ Technician <li>
+      </ul>
+     </ion-card-content>
+  </ion-card>
+
+
+
+
+
 </ion-content>
