--- a/portfolio-app/src/app/tab2/tab2.page.html
+++ b/portfolio-app/src/app/tab2/tab2.page.html
@@ -60,15 +60,17 @@
             <p>Current Project: New World</p>
             <h3>Amazon Robotics Coordinator</h3>
             <p>November 2020 - April 2021</p>
-            <h3>Interim Information Technology (I.T.) Coordinaor</h3>
+            <h3>Interim Information Technology (I.T.) Coordinator</h3>
           </section>
           <section>
             <h1>Technical Skills</h1>
             <ul class="skill-set">
-              <li>Ionic Angular 9</li>
-              <li>Linux, Apache, PHP,MySQL</li>
+              <li>Ionic Angular </li>
+              <li>Linux, Apache, PHP, MySQL</li>
               <li>Virtualization</li>
-              <li>CompTIA A+ Certified</li>
+              <li>Software Testing</li>
+              <li>Python</li> <li>C++ Programming</li>
+              <li>Java Programming</li> <li>LaTex</li>
               
             </ul>
           </section>
