--- a/portfolio-app/src/app/tab3/tab3.page.html
+++ b/portfolio-app/src/app/tab3/tab3.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 3
+      Contact
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,7 +9,7 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="small">Tab 3</ion-title>
+      <ion-title size="small">Contact</ion-title>
     </ion-toolbar>
   </ion-header>
 
