--- a/portfolio-app/src/app/tabs/tabs.page.html
+++ b/portfolio-app/src/app/tabs/tabs.page.html
@@ -13,7 +13,7 @@
 
     <ion-tab-button tab="tab3">
       <ion-icon name="chatboxes"></ion-icon>
-      <ion-label>Chat</ion-label>
+      <ion-label>Contact</ion-label>
     </ion-tab-button>
 
   </ion-tab-bar>
